Update homepage configuration details

--- a/_config.yml
+++ b/_config.yml
@@ -11,17 +11,17 @@ title                    : "Gaole Dai's HomePage"
 title_separator          : "-"
 subtitle                 : 
 name                     : "Gaole Dai"
-description              : ""
-url                     : "https://DVDGL.github.io"
+description              : "Ph.D Candidate@Peking University"
+url                     : "https://daviddaiiiii.github.io/homepage/"
 baseurl                 : ""
-repository               : "daviddaiiiii/DVDGL.github.io"
+repository               : "daviddaiiiii/homepage.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  googlea34440bfd0246b9e.html
+google_site_verification :  # googlea34440bfd0246b9e.html
 bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
