Fix navigation URLs by removing hyphens

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,23 +4,23 @@ main:
     url: "/#about-me"
 
   - title: "news"
-    url: "/#-news"
+    url: "/#news"
 
   - title: "publications"
-    url: "/#-publications"
+    url: "/#publications"
 
   - title: "educations"
-    url: "/#-educations"
+    url: "/#educations"
 
   - title: "internships"
-    url: "/#-internships"
+    url: "/#internships"
 
   - title: "fundings"
-    url: "/#-fundings"
+    url: "/#fundings"
 
   - title: "interests"
-    url: "/#-interests"
+    url: "/#interests"
 
   - title: "blogs"
-    url: "/#-blogs"
+    url: "/#blogs"
 
