Update title and URL for Fundings & Awards

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   - title: "Internships"
     url: "/#-internships"
 
-  - title: "Fundings & Awards"
-    url: "/#-fundings"
+  - title: "Fundings and Awards"
+    url: "/#-fundings-and-awards"
 
   - title: "Interests"
     url: "/#-interests"
