Comment out url and baseurl in _config.yml
Comment out the url and baseurl fields in the config.

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title_separator          : "-"
 subtitle                 : 
 name                     : "Gaole Dai"
 description              : "PhD Candidate"
-url                     : "https://daviddaiiiii.github.io"
-baseurl                 : "https://daviddaiiiii.github.io"
+# url                     : "https://daviddaiiiii.github.io"
+# baseurl                 : "https://daviddaiiiii.github.io"
 repository               : "daviddaiiiii/homepage.github.io"
 google_scholar_stats_use_cdn : true
 
