--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : "Gaole Dai"
 description              : "PhD Candidate"
 # url                     : "https://daviddaiiiii.github.io"
 # baseurl                 : "https://daviddaiiiii.github.io"
-repository               : "daviddaiiiii/homepage.github.io"
+repository               : "daviddaiiiii/homepage"
 google_scholar_stats_use_cdn : true
 
 # google analytics
