--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Gaole Dai"
-  avatar           : "images/android-chrome-512x512.jpg"
+  avatar           : "images/avatar.jpg"
   bio              : "Peking University"
   location         : "Beijing, China"
   employer         :
