--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Fundings and Awards"
-    url: "/#-fundings-and-awards"
+  - title: "Awards"
+    url: "/#-awards"
 
   - title: "Internships"
     url: "/#-internships"
