--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,11 +17,14 @@ main:
   - title: "Talks"
     url: "/#-talks"
 
+  - title: "Service"
+    url: "/#-service"
+
   - title: "Internships"
     url: "/#-internships"
 
   - title: "Interests"
     url: "/#-interests"
 
-  - title: "Others"
-    url: "/#-others"
+  - title: "Miscellaneous"
+    url: "/#-miscellaneous"
