--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
   - title: "Talks"
     url: "/#-talks"
 
-  - title: "Service"
-    url: "/#-service"
+  - title: "Services"
+    url: "/#-services"
 
   - title: "Internships"
     url: "/#-internships"
