--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,5 +26,5 @@ main:
   - title: "Interests"
     url: "/#-interests"
 
-  - title: "Miscellaneous"
-    url: "/#-miscellaneous"
+  - title: "Bond"
+    url: "/#-bond"
