--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,17 @@ main:
   - title: "News"
     url: "/#-news"
 
-  - title: "Educations"
-    url: "/#-educations"
-
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Honors and Awards"
+  - title: "Awards"
     url: "/#-awards"
 
-  - title: "Services and Activities"
-    url: "/#-services"
+  - title: "Educations"
+    url: "/#-educations"
 
   - title: "Internships"
     url: "/#-internships"
 
-  - title: "Other Project"
-    url: "/#-interests"
-
-  - title: "Visitor Map"
-    url: "/#-visitor"
+  - title: "中文"
+    url: /chinese/
