--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Haoliang Zhou &nbsp &nbsp &nbsp &nbsp(周浩樑)" 
-  avatar           : "/images/haoliangzhou.jpg"
+  avatar           : "/images/haoliangzhou1.jpg"
   # bio              : "Tianjin University of Technology (TJUT)"
   location         : "Tianjin, China"
   employer         :
